--- a/src/styles/product.scss
+++ b/src/styles/product.scss
@@ -8,8 +8,8 @@
   margin-top: 50px;
 
   &__photo {
-    padding: 8px 0;
-    transition: transform 1s;
+    padding: 8px 4px;
+    transition: transform 400ms;
     transition-delay: 0.2s;
     border: 3px solid #f3f3f3;
     width: 160px;
