--- a/src/styles/product.scss
+++ b/src/styles/product.scss
@@ -7,6 +7,12 @@
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.07);
   margin-top: 50px;
 
+  @each $number, $order in $cardsList {
+    &--#{$number} {
+      grid-area: $order;
+    }
+  }
+
   &__photo {
     padding: 8px 4px;
     transition: transform 400ms;
