--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -5,6 +5,7 @@
   height: 60px;
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+  transition: color 10s linear;
 
   &__icon {
     margin-left: 50px;
