--- a/src/styles/product.scss
+++ b/src/styles/product.scss
@@ -1,3 +1,5 @@
+@import "./utils.scss";
+
 .product {
   padding: 16px;
   height: 403px;
@@ -14,13 +16,10 @@
   }
 
   &__photo {
-    padding: 8px 4px;
-    transition: transform 400ms;
-    transition-delay: 0.2s;
-    border: 3px solid #f3f3f3;
     width: 160px;
     height: 134px;
     margin: 16px 1px 37px 3px;
+    transition: transform 400ms;
   }
 
   &__text-title {
@@ -65,9 +64,11 @@
   &__link:hover {
     color: #00acdc;
     background: #fff;
+    transition: 0.4s;
   }
 
   &__photo:hover {
-    transform: scale(1.26, 1.48);
+    transform: scale(1.26, 1.46);
+    border: 3px solid #f3f3f3;
   }
 }
